@@ -24,7 +24,6 @@ import com.arcadedb.query.sql.executor.CommandContext;
 import com.arcadedb.query.sql.executor.MultiValue;
 
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 
 /**
@@ -45,7 +44,7 @@ public class TailFunction implements StatelessFunction {
     // Accept List/Collection/array (incl. primitive arrays from numeric-array parameters, issue #4284).
     final List<Object> list = MultiValue.getMultiValueAsList(args[0]);
     if (list != null)
-      return list.size() <= 1 ? Collections.emptyList() : new ArrayList<>(list.subList(1, list.size()));
-    return Collections.emptyList();
+      return list.size() <= 1 ? List.of() : new ArrayList<>(list.subList(1, list.size()));
+    return List.of();
   }
 }
