@@ -19,9 +19,9 @@
 package com.arcadedb.function.sql.coll;
 
 import com.arcadedb.database.Identifiable;
+import com.arcadedb.function.sql.SQLAggregatedCollectionFunction;
 import com.arcadedb.query.sql.executor.CommandContext;
 import com.arcadedb.query.sql.executor.MultiValue;
-import com.arcadedb.function.sql.SQLAggregatedCollectionFunction;
 
 import java.util.*;
 
@@ -43,7 +43,7 @@ public class SQLFunctionIntersect extends SQLAggregatedCollectionFunction<Object
     Object value = params[0];
 
     if (value == null)
-      return Collections.emptySet();
+      return Set.of();
 
     if (params.length == 1) {
       // AGGREGATION MODE (STATEFUL)
